<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrderActivity">

    <TextView
        android:id="@+id/TextViewGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/RadioGroupDrinks"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/TextViewAdditives"
        app:layout_constraintTop_toBottomOf="@+id/TextViewGreetings">

        <RadioButton
            android:id="@+id/RadioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tea"
            android:textColor="@color/purple_500" />

        <RadioButton
            android:id="@+id/RadioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/coffee"
            android:textColor="@color/purple_500" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupDrinks"
        tools:layout_editor_absoluteX="8dp" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toStartOf="@id/checkBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBoxMilk"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxMilk"/>

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/TextViewDrinkType"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@id/TextViewAdditives" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintTop_toTopOf="@id/checkBoxMilk"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxMilk"/>

    <TextView
        android:id="@+id/TextViewDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/choose_drink_type"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerTea"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk"
      />

    <Spinner
        android:id="@+id/SpinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="invisible"
        android:entries="@array/Types_of_tea"
        app:layout_constraintBottom_toTopOf="@id/ButtonMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/TextViewDrinkType"
         />

    <Spinner
        android:id="@+id/SpinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:visibility="visible"
        android:visibility="invisible"
        android:entries="@array/Types_of_coffee"
        app:layout_constraintBottom_toTopOf="@+id/ButtonMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/TextViewDrinkType"
        />


    <Button
        android:id="@+id/ButtonMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/make_order"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerCoffee"
        tools:layout_editor_absoluteX="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>